--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 13:05:02 2018</p>
+         Last Run: Mon Dec  3 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,14 +31,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-10</td>
-                        <td>-15</td>
-                        <td>5</td>
-                        <td>80</td>
+                        <td>-9</td>
+                        <td>-14</td>
+                        <td>3</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>20</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>15</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>-11</td>
                         <td>-16</td>
                         <td>4</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
@@ -89,7 +89,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-15",
+                 "-14",
                  "-15",
                  "-16"
                ]
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-10",
+                 "-9",
                  "-10",
                  "-11"
                ]
@@ -160,7 +160,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
+                 "3",
                  "4",
                  "4"
                ]
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
                  "76",
-                 "78"
+                 "76",
+                 "77"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "20",
                  "15",
+                 "18",
                  "9"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 13:05:02 2018</p>
+         Last Run: Mon Dec  3 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -249,7 +249,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -261,7 +261,7 @@
                         <td>-15</td>
                         <td>-20</td>
                         <td>7</td>
-                        <td>87</td>
+                        <td>88</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -273,7 +273,7 @@
                         <td>-16</td>
                         <td>-22</td>
                         <td>7</td>
-                        <td>92</td>
+                        <td>93</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -386,9 +386,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
                  "87",
-                 "92"
+                 "88",
+                 "93"
                ]
              },
              {
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 13:05:02 2018</p>
+         Last Run: Mon Dec  3 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -460,39 +460,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>64</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>30</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-5</td>
-                        <td>-9</td>
-                        <td>0</td>
+                        <td>-10</td>
+                        <td>1</td>
                         <td>62</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>34</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>-4</td>
-                        <td>-8</td>
+                        <td>Clear</td>
+                        <td>-3</td>
+                        <td>-7</td>
                         <td>0</td>
-                        <td>58</td>
+                        <td>57</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>40</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,8 +520,8 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-12",
-                 "-9",
-                 "-8"
+                 "-10",
+                 "-7"
                ]
              },
              {
@@ -533,7 +533,7 @@
                "data":[
                  "-7",
                  "-5",
-                 "-4"
+                 "-3"
                ]
              }
            ]
@@ -591,7 +591,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "0",
+                 "1",
                  "0"
                ]
              },
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "64",
                  "62",
-                 "62",
-                 "58"
+                 "57"
                ]
              },
              {
@@ -612,9 +612,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "30",
-                 "34",
-                 "40"
+                 "22",
+                 "25",
+                 "29"
                ]
              }
            ]
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 13:05:02 2018</p>
+         Last Run: Mon Dec  3 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -678,24 +678,24 @@
                         <td>Partly Cloudy</td>
                         <td>-2</td>
                         <td>-6</td>
-                        <td>2</td>
-                        <td>63</td>
-                        <td>1</td>
+                        <td>3</td>
+                        <td>66</td>
+                        <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>49</td>
+                        <td>SW</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>-1</td>
                         <td>-5</td>
-                        <td>2</td>
-                        <td>60</td>
-                        <td>1</td>
+                        <td>3</td>
+                        <td>62</td>
+                        <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>48</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -703,11 +703,11 @@
                         <td>0</td>
                         <td>-4</td>
                         <td>3</td>
-                        <td>58</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>45</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -805,8 +805,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
-                 "2",
+                 "3",
+                 "3",
                  "3"
                ]
              },
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "60",
-                 "58"
+                 "66",
+                 "62",
+                 "60"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "49",
-                 "48",
-                 "45"
+                 "56",
+                 "53",
+                 "49"
                ]
              }
            ]
