--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 15:05:02 2018</p>
+         Last Run: Mon Dec  3 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Clear</td>
                         <td>-9</td>
                         <td>-14</td>
-                        <td>3</td>
+                        <td>1</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
@@ -57,12 +57,12 @@
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>4</td>
-                        <td>76</td>
+                        <td>3</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>9</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,9 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "1",
                  "3",
-                 "3",
-                 "4"
+                 "3"
                ]
              },
              {
@@ -173,7 +173,7 @@
                "data":[
                  "75",
                  "74",
-                 "76"
+                 "75"
                ]
              },
              {
@@ -184,7 +184,7 @@
                "data":[
                  "18",
                  "16",
-                 "9"
+                 "5"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 15:05:02 2018</p>
+         Last Run: Mon Dec  3 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -246,10 +247,10 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-14</td>
-                        <td>-19</td>
+                        <td>-15</td>
+                        <td>-20</td>
                         <td>7</td>
-                        <td>86</td>
+                        <td>87</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -259,11 +260,11 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-15</td>
-                        <td>-20</td>
+                        <td>-21</td>
                         <td>7</td>
-                        <td>88</td>
+                        <td>89</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>SSW</td>
                         <td>6</td>
                      </tr>
@@ -273,7 +274,7 @@
                         <td>-16</td>
                         <td>-22</td>
                         <td>7</td>
-                        <td>93</td>
+                        <td>94</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -304,8 +305,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-19",
                  "-20",
+                 "-21",
                  "-22"
                ]
              },
@@ -316,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-14",
+                 "-15",
                  "-15",
                  "-16"
                ]
@@ -386,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "86",
-                 "88",
-                 "93"
+                 "87",
+                 "89",
+                 "94"
                ]
              },
              {
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 15:05:02 2018</p>
+         Last Run: Mon Dec  3 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -464,23 +465,23 @@
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
-                        <td>62</td>
+                        <td>61</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>22</td>
+                        <td>21</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>-5</td>
-                        <td>-9</td>
+                        <td>-10</td>
                         <td>1</td>
                         <td>59</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>24</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -490,9 +491,9 @@
                         <td>0</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WSW</td>
-                        <td>27</td>
+                        <td>29</td>
                      </tr>
                   </tbody>
                </table>
@@ -520,7 +521,7 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-12",
-                 "-9",
+                 "-10",
                  "-7"
                ]
              },
@@ -601,7 +602,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "62",
+                 "61",
                  "59",
                  "55"
                ]
@@ -612,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "24",
-                 "27"
+                 "21",
+                 "23",
+                 "29"
                ]
              }
            ]
@@ -654,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 15:05:02 2018</p>
+         Last Run: Mon Dec  3 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -679,11 +680,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>WSW</td>
-                        <td>56</td>
+                        <td>SW</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -694,8 +695,8 @@
                         <td>62</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>WSW</td>
-                        <td>53</td>
+                        <td>SW</td>
+                        <td>51</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -707,7 +708,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>49</td>
+                        <td>47</td>
                      </tr>
                   </tbody>
                </table>
@@ -816,7 +817,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "65",
+                 "66",
                  "62",
                  "60"
                ]
@@ -827,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "56",
-                 "53",
-                 "49"
+                 "54",
+                 "51",
+                 "47"
                ]
              }
            ]
