--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 16:05:02 2018</p>
+         Last Run: Mon Dec  3 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Clear</td>
                         <td>-9</td>
                         <td>-14</td>
-                        <td>1</td>
+                        <td>0</td>
                         <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>18</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>3</td>
+                        <td>1</td>
                         <td>74</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>16</td>
+                        <td>13</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>3</td>
                      </tr>
                   </tbody>
                </table>
@@ -160,8 +160,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "0",
                  "1",
-                 "3",
                  "3"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "18",
-                 "16",
-                 "5"
+                 "14",
+                 "13",
+                 "3"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 16:05:02 2018</p>
+         Last Run: Mon Dec  3 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Dec 05, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -247,8 +247,8 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-15</td>
-                        <td>-20</td>
+                        <td>-14</td>
+                        <td>-19</td>
                         <td>7</td>
                         <td>87</td>
                         <td>0</td>
@@ -260,13 +260,13 @@
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-15</td>
-                        <td>-21</td>
+                        <td>-20</td>
                         <td>7</td>
-                        <td>89</td>
+                        <td>88</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -274,7 +274,7 @@
                         <td>-16</td>
                         <td>-22</td>
                         <td>7</td>
-                        <td>94</td>
+                        <td>93</td>
                         <td>0</td>
                         <td>8</td>
                         <td>SSW</td>
@@ -305,8 +305,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
+                 "-19",
                  "-20",
-                 "-21",
                  "-22"
                ]
              },
@@ -317,7 +317,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-15",
+                 "-14",
                  "-15",
                  "-16"
                ]
@@ -388,8 +388,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "87",
-                 "89",
-                 "94"
+                 "88",
+                 "93"
                ]
              },
              {
@@ -399,7 +399,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "6",
-                 "6",
+                 "5",
                  "5"
                ]
              }
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 16:05:02 2018</p>
+         Last Run: Mon Dec  3 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 17 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 08, 2018 - 10:35AM til 11:35AM</H4>
                <table class="table table-striped">
@@ -461,39 +461,39 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-7</td>
                         <td>-12</td>
                         <td>1</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WSW</td>
-                        <td>21</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-5</td>
                         <td>-10</td>
                         <td>1</td>
-                        <td>59</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>23</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>0</td>
-                        <td>55</td>
+                        <td>1</td>
+                        <td>56</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WSW</td>
-                        <td>29</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -593,7 +593,7 @@
                "data":[
                  "1",
                  "1",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -602,9 +602,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "61",
-                 "59",
-                 "55"
+                 "62",
+                 "60",
+                 "56"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "23",
-                 "29"
+                 "30",
+                 "34",
+                 "40"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Mon Dec  3 16:05:02 2018</p>
+         Last Run: Mon Dec  3 17:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 09, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -680,11 +680,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>3</td>
-                        <td>66</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>54</td>
+                        <td>WSW</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -695,8 +695,8 @@
                         <td>62</td>
                         <td>0</td>
                         <td>13</td>
-                        <td>SW</td>
-                        <td>51</td>
+                        <td>WSW</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -708,7 +708,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>47</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -817,7 +817,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "66",
+                 "65",
                  "62",
                  "60"
                ]
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "54",
-                 "51",
-                 "47"
+                 "56",
+                 "53",
+                 "49"
                ]
              }
            ]
